New UI with material elements. Added showIcons Activity.

--- a/MainActivity22/app/src/main/res/layout/all_icons_main.xml
+++ b/MainActivity22/app/src/main/res/layout/all_icons_main.xml
@@ -10,10 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 	    android:numColumns="auto_fit"
-	    android:columnWidth="70dp"
+	    android:columnWidth="50dp"
 	    android:stretchMode="columnWidth"
-	    android:verticalSpacing="@dimen/margin_medium"
-	    android:dividerHeight="@dimen/margin_medium_sm"
+        android:horizontalSpacing="16dp"
+	    android:verticalSpacing="16dp"
+	    android:dividerHeight="32dp"
 	    android:listSelector="@color/transparent"
 	    android:cacheColorHint="@color/transparent"
 	    android:gravity="center_horizontal" />
