--- a/MainActivity22/app/src/main/res/layout/main.xml
+++ b/MainActivity22/app/src/main/res/layout/main.xml
@@ -1,15 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/mainLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#E5E5E5"
-    android:orientation="vertical">
-
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/mainLayout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
         <LinearLayout
@@ -19,9 +11,11 @@
             android:orientation="vertical">
             <android.support.v7.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/card_view"
+                android:id="@+id/card_view_theme"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
                 android:paddingBottom="8dp"
                 android:onClick="applyTheme"
                 card_view:cardCornerRadius="4dp">
@@ -33,7 +27,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/info_text"
+                        android:id="@+id/info_text_theme"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:src="@drawable/background1"
@@ -59,7 +53,103 @@
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="16dp" />
+
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_view_background"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:paddingBottom="8dp"
+                android:onClick="showBackground"
+                card_view:cardCornerRadius="4dp">
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:gravity="top"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/info_text_background"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/background"
+                        android:scaleType="fitXY"
+                        android:adjustViewBounds="true"
+                        />
+
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp"
+                        android:textSize="24sp"
+                        android:text="Wallpaper"/>
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="16dp"
+                        android:paddingBottom="16dp"
+                        android:textSize="16sp"
+                        android:text="Apply the official theme wallpaper."/>
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="16dp" />
+
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_view_report"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:paddingBottom="8dp"
+                android:onClick="showBackground"
+                card_view:cardCornerRadius="4dp">
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:gravity="top"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/info_text_report"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/background2"
+                        android:scaleType="fitXY"
+                        android:adjustViewBounds="true"
+                        />
+
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp"
+                        android:textSize="24sp"
+                        android:text="Request Icons"/>
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="16dp"
+                        android:paddingBottom="16dp"
+                        android:textSize="16sp"
+                        android:text="Missing icons? Send us your request."/>
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
             </LinearLayout>
     </ScrollView>
-
-</LinearLayout>
