--- a/MainActivity22/app/src/main/res/layout/all_icons_main.xml
+++ b/MainActivity22/app/src/main/res/layout/all_icons_main.xml
@@ -2,19 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:paddingTop="@dimen/margin_medium_sm" >
+    android:layout_height="match_parent" >
               
 	<GridView 
         android:id="@+id/icon_grid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-	    android:numColumns="auto_fit"
-	    android:columnWidth="50dp"
-	    android:stretchMode="columnWidth"
+	    android:numColumns="4"
+        android:stretchMode="columnWidth"
         android:horizontalSpacing="16dp"
 	    android:verticalSpacing="16dp"
-	    android:dividerHeight="32dp"
 	    android:listSelector="@color/transparent"
 	    android:cacheColorHint="@color/transparent"
 	    android:gravity="center_horizontal" />
