--- a/MainActivity22/app/src/main/res/layout/apply_launcher_behind.xml
+++ b/MainActivity22/app/src/main/res/layout/apply_launcher_behind.xml
@@ -10,7 +10,7 @@
 	    android:layout_height="match_parent"
 	    android:orientation="vertical" >
 
-		<GridView 
+		<GridView
 		    android:id="@+id/grid"
 		    android:layout_width="match_parent"
 		    android:layout_height="match_parent"
@@ -28,6 +28,7 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="@dimen/dialog_button_height"
     		android:layout_weight="0"
+			android:textColor="#222222"
 	        android:text="@string/cancel"
 	        android:background="@drawable/button_selector" />
 	    
